language/move-lang/tests/move_check/typing/spec_block_fail.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/spec_block_fail.move:3:19
  │
3 │         (spec {}: u64);
  │          -------  ^^^
  │          │        │
  │          │        Invalid type annotation
  │          │        Expected: 'u64'
  │          Given: '()'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/spec_block_fail.move:4:19
  │
4 │         (spec {}: &u64);
  │          -------  ^^^^
  │          │        │
  │          │        Invalid type annotation
  │          │        Expected: '&u64'
  │          Given: '()'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/spec_block_fail.move:5:19
  │
5 │         (spec {}: (u64, u64));
  │          -------  ^^^^^^^^^^
  │          │        │
  │          │        Invalid type annotation
  │          │        Expected: '(u64, u64)'
  │          Given: '()'

